added idempotent link creation
